--- a/index.html
+++ b/index.html
@@ -466,6 +466,7 @@
 
 </head>
 <body scroll="no" class="hashover">
+<img  style="CURSOR: pointer" onclick="javascript:window.open('http://b.qq.com/webc.htm?new=0&sid=1245897169&o=gpcliyc.github.io&q=7', '_blank', 'height=502, width=644,toolbar=no,scrollbars=no,menubar=no,status=no');"  border="0" SRC=http://wpa.qq.com/pa?p=1:1245897169:1 alt="在线客服">
     <div id="outerContainer">
 
         <div id="leftPanel">
