--- a/index.html
+++ b/index.html
@@ -466,6 +466,22 @@
 
 </head>
 <body scroll="no" class="hashover">
+<div id="rightArrow"><a href="javascript:;" title="在线客户"></a></div>
+<div id="floatDivBoxs">
+	<div class="floatDtt">在线客服</div>
+    <div class="floatShadow">
+        <ul class="floatDqq">
+            <li style="padding-left:0px;"><a target="_blank" href="tencent://message/?uin=1245897168&Site=sc.chinaz.com&Menu=yes"><img src="images/qq.png" align="absmiddle">&nbsp;&nbsp;在线客服李建</a></li>
+            <li style="padding-left:0px;"><a target="_blank" href="tencent://message/?uin=1234567890&Site=sc.chinaz.com&Menu=yes"><img src="images/qq.png" align="absmiddle">&nbsp;&nbsp;在线客服2号</a></li>
+            <li style="padding-left:0px;"><a target="_blank" href="tencent://message/?uin=1234567890&Site=sc.chinaz.com&Menu=yes"><img src="images/qq.png" align="absmiddle">&nbsp;&nbsp;在线客服3号</a></li>
+        </ul>
+        <div class="floatDtxt">热线电话</div>
+        <div class="floatDtel"><img src="images/online_phone.jpg" width="155" height="45" alt=""></div>
+        <div style="text-align:center;padding:10PX 0 5px 0;background:#EBEBEB;"><img src="images/wap_ico.jpg"><br>微信公众账号</div>
+    </div>
+    <div class="floatDbg"></div>
+</div>
+<script type="text/javascript" src="js/zzsc.js"></script>
 <img  style="CURSOR: pointer" onclick="javascript:window.open('http://b.qq.com/webc.htm?new=0&sid=1245897169&o=gpcliyc.github.io&q=7', '_blank', 'height=502, width=644,toolbar=no,scrollbars=no,menubar=no,status=no');"  border="0" SRC=http://wpa.qq.com/pa?p=1:1245897169:1 alt="在线客服">
     <div id="outerContainer">
 
