--- a/index.html
+++ b/index.html
@@ -464,6 +464,8 @@
     <link type="text/css" rel="Stylesheet" href="plugins/debug/styles/debug.css" />
     <script type="text/javascript" src="plugins/debug/debug.js"></script>
 
+    <link href="css/zzsc.css" rel="stylesheet" type="text/css" />
+
 </head>
 <body scroll="no" class="hashover">
 <div id="rightArrow"><a href="javascript:;" title="在线客户"></a></div>
